checkpoint commit
Signed-off-by: Nikita Lebedev <nikita.lebedev@limechain.tech>